<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AddNewTask"
    tools:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_tasks">

    <TextView
        android:id="@+id/taskTitleLabel"
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/title_LabelText"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/roboto_thin" />

    <TextView
        android:id="@+id/pointsLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/date_LabelText"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleLabel"
        tools:fontFamily="@font/roboto_thin" />

    <TextView
        android:id="@+id/dateLabelText"
        android:layout_width="306dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/responsible_LabelText"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsInput"
        tools:fontFamily="@font/roboto_thin" />

    <TextView
        android:id="@+id/dateLabelText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/points_LabelText"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsLabelText"
        tools:fontFamily="@font/roboto_thin" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="245dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/date_HintText"
        android:inputType="date|textPersonName"
        app:layout_constraintStart_toEndOf="@+id/pointsLabelText"
        app:layout_constraintTop_toBottomOf="@+id/titleInput"
        tools:textSize="20sp" />

    <EditText
        android:id="@+id/pointsInput"
        android:layout_width="83dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:inputType="date|textPersonName"
        android:text="@string/points_HintText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateLabelText2"
        tools:textSize="20sp" />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/title_HintText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskTitleLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="20sp" />

    <Spinner
        android:id="@+id/responsibleSpinner"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:entries="@array/responsiblePossible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateLabelText" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="56dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />
</android.support.constraint.ConstraintLayout>